Refactored the Generator class to improve unit test. Add unit test to ensure the generated code will compile